--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="buttons">
         <button id="first">Dark Sky</button>
-        <button id="second">Openweather</button>
+        <button id="second">Open-weather</button>
         <button id="third">AccuWeather</button>
     </div>
     <!-- Dark Sky API -->
