--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="buttons">
-        <button id="first">Dark Sky</button>
-        <button id="second">Open-weather</button>
+        <button id="darkSky">Dark Sky</button>
+        <button id="openWeather">OpenWeather</button>
         <button id="third">Accu-Weather</button>
     </div>
     <!-- Dark Sky API -->
@@ -23,10 +23,10 @@
         </div>
         <div class="temperature">
             <div class="degree-section">
-                <h2 class="temperature-degree">32</h2>
+                <h2 class="temperature-degree">Temperature</h2>
                 <span>F</span>
             </div>
-            <div class="temperature-description">It's cold outside!</div>
+            <div class="temperature-description"></div>
         </div>
     </div>
 
