--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Weather</title>
+    <title>WeatherApp</title>
 </head>
 
 <body>
     <div class="buttons">
         <button id="darkSky">Dark Sky</button>
         <button id="openWeather">OpenWeather</button>
-        <button id="third">Accu-Weather</button>
+        <button id="weatherstack">weatherstack</button>
     </div>
-    <!-- Dark Sky API -->
+
     <div class="darksky">
         <div class="location">
             <h1 class="location-timezone">Timezone</h1>
