--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="style.css">
     <title>WeatherApp</title>
 </head>
@@ -12,8 +15,8 @@
 <body>
     <div class="buttons">
         <button id="darkSky">Dark Sky</button>
-        <button id="openWeather">OpenWeather</button>
-        <button id="weatherstack">weatherstack</button>
+        <button id="openWeather">Open Weather</button>
+        <button id="weatherstack">Weatherstack</button>
     </div>
 
     <div class="darksky">
