--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
 
+    <script src="fetchData.js"></script>
     <script src="skycons.js"></script>
     <script src="app.js"></script>
 </body>
